# vulkan-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
docs/: Doxyfile  DoxygenLayout.xml  _config.yml  index.html
docs/html/: 1___november__19_8md.html  2___november__13_8md.html  3___november__12_8md.html  4___november__06_8md.html  _application_8cpp.html  _application_8h.html  _application_8h_source.html  _bindless_manager_8cpp.html  _bindless_manager_8h.html  _bindless_manager_8h_source.html  _buffer_8cpp.html  _buffer_8h.html  _buffer_8h_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _color_component_8cpp.html  _color_component_8h.html  _color_component_8h_source.html  _command_pool_8cpp.html  _command_pool_8h.html  _command_pool_8h_source.html  _components_8h.html  _components_8h_source.html  _cube_8cpp.html  _cube_8h.html  _cube_8h_source.html  _descriptor_pool_8cpp.html  _descriptor_pool_8h.html  _descriptor_pool_8h_source.html  _device_8cpp.html  _device_8h.html  _device_8h_source.html  _entity_8h.html  _entity_8h_source.html  _event_8h.html  _event_8h_source.html  _forward_substage_8cpp.html  _forward_substage_8h.html  _forward_substage_8h_source.html  (+447 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+94 more)
docs/latex/: 1___november__19_8md.tex  2___november__13_8md.tex  3___november__12_8md.tex  4___november__06_8md.tex  _application_8cpp.tex  _application_8h.tex  _application_8h_source.tex  _bindless_manager_8cpp.tex  _bindless_manager_8h.tex  _bindless_manager_8h_source.tex  _buffer_8cpp.tex  _buffer_8h.tex  _buffer_8h_source.tex  _camera_8cpp.tex  _camera_8h.tex  _camera_8h_source.tex  _color_component_8cpp.tex  _color_component_8h.tex  _color_component_8h_source.tex  _command_pool_8cpp.tex  _command_pool_8h.tex  _command_pool_8h_source.tex  _components_8h.tex  _components_8h_source.tex  _cube_8cpp.tex  _cube_8h.tex  _cube_8h_source.tex  _descriptor_pool_8cpp.tex  _descriptor_pool_8h.tex  _descriptor_pool_8h_source.tex  _device_8cpp.tex  _device_8h.tex  _device_8h_source.tex  _entity_8h.tex  _entity_8h_source.tex  _event_8h.tex  _event_8h_source.tex  _forward_substage_8cpp.tex  _forward_substage_8h.tex  _forward_substage_8h_source.tex  (+314 more)
docs/updates/: 1_11_25.md  1_12_03.md  2_11_12.md  2_11_25.md  3_11_06.md  November_12.md  November_12.txt  November_13.md  November_6.md  create_new_update.bat  create_new_update.sh
shaders/: basemap.glsl  basemap_rotated.glsl  cube.glsl  pole_lines.glsl  pole_tubes.glsl  simple_geometry.glsl  texture2d.glsl  tick_lines.glsl  tick_tubes.glsl  triangle.glsl
src/: main.cpp  pch.h
src/application/: Application.cpp  Application.h  Window.cpp  Window.h
src/common/: event.h  input.cpp  input.h  logging.cpp  logging.h  utils.cpp  utils.h
src/core/: Device.cpp  Device.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h
vkf/: CMakeLists.txt  Namespaces.h  pch.h
vkf/common/: CommonFwd.h  Event.h  GeometryHandling.cpp  GeometryHandling.h  Input.cpp  Input.h  Log.h  UUID.cpp  UUID.h  Utility.cpp  Utility.h  vkf.common.input.ixx  vkf.common.log.ixx  vkf.common.utils.ixx
vkf/core/: Buffer.cpp  Buffer.h  CommandPool.cpp  CommandPool.h  CoreFwd.h  DescriptorPool.cpp  DescriptorPool.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  vkf.core.Device.cpp  vkf.core.Device.ixx  vkf.core.Instance.cpp  vkf.core.Instance.ixx  vkf.core.PhysicalDevice.cpp  vkf.core.PhysicalDevice.ixx  vkf.core.Queue.cpp  vkf.core.Queue.ixx
vkf/platform/: Application.cpp  Application.h  Gui.cpp  Gui.h  PlatformFwd.h  Window.cpp  Window.h  vkf.platform.Application.cpp  vkf.platform.Application.ixx  vkf.platform.Window.cpp  vkf.platform.Window.ixx
vkf/rendering/: BindlessManager.cpp  BindlessManager.h  ForwardSubstage.cpp  ForwardSubstage.h  FrameData.cpp  FrameData.h  GuiSubstage.cpp  GuiSubstage.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderManager.cpp  RenderManager.h  RenderSource.cpp  RenderSource.h  RenderSubstage.cpp  RenderSubstage.h  Renderer.cpp  Renderer.h  RenderingFwd.h
vkf/scene/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneFwd.h
vkf/scene/components/: BoundingBoxComponent.cpp  BoundingBoxComponent.h  ColorComponent.cpp  ColorComponent.h  Components.h  GeotiffComponent.cpp  GeotiffComponent.h  GraticuleComponent.cpp  GraticuleComponent.h  IdComponent.h  MaterialComponent.cpp  MaterialComponent.h  MeshComponent.cpp  MeshComponent.h  ParentComponent.cpp  ParentComponent.h  PoleComponent.cpp  PoleComponent.h  PrefabComponent.h  ProjectionComponent.cpp  ProjectionComponent.h  RelationComponent.cpp  RelationComponent.h  SelectComponent.cpp  SelectComponent.h  TagComponent.cpp  TagComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
vkf/scene/prefabs/: BasemapActor.cpp  BasemapActor.h  Cube.cpp  Cube.h  GraticuleActor.cpp  GraticuleActor.h  PoleActor.cpp  PoleActor.h  Prefab.cpp  Prefab.h  PrefabFactory.cpp  PrefabFactory.h  PrefabType.h  PrefabTypeManager.cpp  PrefabTypeManager.h  Texture2D.cpp  Texture2D.h  Triangle.cpp  Triangle.h
